# some_game

./: Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  env.example  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: a646ac8310fb_create_table.py
src/: admin.py  schemas.py
src/api_v1/: routes.py
src/database/: base.py  models.py
